Update blog landing page

--- a/app/routes/blog+/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.mdx
+++ b/app/routes/blog+/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.mdx
@@ -1,6 +1,6 @@
 ---
 title: "How to Tailor Your Resume to Job Descriptions with AI in 2025"
-description: "Learn how AI resume tailoring works, avoid common mistakes, and land 71% more interviews. Step-by-step guide to beating ATS systems ethically."
+description: "Match your resume to any job in 5 clear steps. Avoid common pitfalls, align with ATS, and use AI ethically to boost interview invites."
 date: "2025-09-09"
 tags: ["AI", "Resume Tools", "Career", "Job Search"]
 keywords: ["tailor resume to job description AI"]
