--- a/app/routes/blog+/_blog.How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.mdx
+++ b/app/routes/blog+/_blog.How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.mdx
@@ -9,13 +9,12 @@ cover: "/blog_images/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-20
 image: "/blog_images/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.png"
 coverAlt: "Illustration of a candidate climbing steps of tailored resumes with AI/ATS icons"
 ogImage: "/blog_images/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.png"
+handle:
+  breadcrumb: "How to Tailor Your Resume with AI in 2025"
 ---
 
-import { Prose } from '~/components/prose.tsx'
+import { Link } from '@remix-run/react'
 import hero from '~/blog/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-in-2025.png'
-
-<div className="mx-auto max-w-3xl px-4">
-<Prose>
 
 # How to Tailor Your Resume to Job Descriptions with AI in 2025
 
@@ -33,17 +32,17 @@ import hero from '~/blog/How-to-Tailor-Your-Resume-to-Job-Descriptions-with-AI-i
 </figure>
 
 
-> **The reality:** [99% of Fortune 500 companies use ATS](https://topresume.com/career-advice/what-is-an-ats-resume), and many systems [automatically filter out ~75% of resumes](https://www.careereducation.columbia.edu/resources/optimizing-your-resume-applicant-tracking-systems) before a human ever sees them. In a market where there can be [~250 applicants per corporate role](https://www.entrepreneur.com/business-news/employers-can-tell-if-you-used-chatgpt-to-write-your-resume/478444), a generic resume is effectively invisible.
+> **The reality:** <a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">99% of Fortune 500 companies use ATS</a>, and many systems <a href="https://www.careereducation.columbia.edu/resources/optimizing-your-resume-applicant-tracking-systems" target="_blank" rel="noopener noreferrer">automatically filter out ~75% of resumes</a> before a human ever sees them. In a market where there can be <a href="https://www.entrepreneur.com/business-news/employers-can-tell-if-you-used-chatgpt-to-write-your-resume/478444" target="_blank" rel="noopener noreferrer">~250 applicants per corporate role</a>, a generic resume is effectively invisible.
 
-**Good news:** AI-powered tailoring has been shown to deliver [up to 71% higher callback rates](https://cultivatedculture.com/resume-statistics/) when used ethically and strategically.
+**Good news:** AI-powered tailoring has been shown to deliver <a href="https://cultivatedculture.com/resume-statistics/" target="_blank" rel="noopener noreferrer">up to 71% higher callback rates</a> when used ethically and strategically.
 
 ---
 
 ## Why this matters in 2025
 
-- **AI is in the hiring loop.** About [87% of companies use AI-driven recruitment tools](https://www.herohunt.ai/blog/2024-recruitment-statistics-hiring-and-technology), and recruiters typically spend [~6 seconds scanning each resume](https://www.demandsage.com/ai-recruitment-statistics/).
-- **Most resumes miss the mark.** Candidates usually match only [~51% of the relevant keywords](https://resumeworded.com/targeted-resume), and only [~2% of resumes result in interviews](https://resume.io/blog/resume-statistics).
-- **ATS goes beyond keywords.** Modern systems evaluate context, relevance, and structure. See [ATS-friendly formatting guidance](https://topresume.com/career-advice/what-is-an-ats-resume).
+- **AI is in the hiring loop.** About <a href="https://www.herohunt.ai/blog/2024-recruitment-statistics-hiring-and-technology" target="_blank" rel="noopener noreferrer">87% of companies use AI-driven recruitment tools</a>, and recruiters typically spend <a href="https://www.demandsage.com/ai-recruitment-statistics/" target="_blank" rel="noopener noreferrer">~6 seconds scanning each resume</a>.
+- **Most resumes miss the mark.** Candidates usually match only <a href="https://resumeworded.com/targeted-resume" target="_blank" rel="noopener noreferrer">~51% of the relevant keywords</a>, and only <a href="https://resume.io/blog/resume-statistics" target="_blank" rel="noopener noreferrer">~2% of resumes result in interviews</a>.
+- **ATS goes beyond keywords.** Modern systems evaluate context, relevance, and structure. See <a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">ATS-friendly formatting guidance</a>.
 
 > **Goal:** Communicate the right evidence, in the right language, in the right places so both ATS and humans quickly see your fit.
 
@@ -71,7 +70,7 @@ Paste the full posting into your AI tool. Strong tools surface both explicit req
 > **Pro tip:** Highlight recurring nouns and verbs across the posting. They often reveal the role’s core competencies and outcomes.
 
 ### 2) Identify skills gaps
-Compare the posting to your resume. Focus first on core hard skills, then soft skills and domain terms. Some data suggests resumes in the **475–600 word** range perform well for quick scans. Prioritize clarity over fluff. ([stats roundup](https://topresume.com/career-advice/what-is-an-ats-resume), [callback benchmarks](https://cultivatedculture.com/resume-statistics/))
+Compare the posting to your resume. Focus first on core hard skills, then soft skills and domain terms. Some data suggests resumes in the **475–600 word** range perform well for quick scans. Prioritize clarity over fluff. (<a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">stats roundup</a>, <a href="https://cultivatedculture.com/resume-statistics/" target="_blank" rel="noopener noreferrer">callback benchmarks</a>)
 
 ### 3) Optimize content, not just keywords
 Mirror the role’s language in your **summary** and **experience bullets**, but keep your voice. AI can help propose phrasing that matches employer terminology while staying authentic.
@@ -85,12 +84,12 @@ Mirror the role’s language in your **summary** and **experience bullets**, but
 - *After:* “Owned a dbt-based pipeline migrating 12M rows/month; cut failed loads **-92%** and slashed compute costs **-28%**.”
 
 ### 4) Quantify achievements
-Only [~26% of resumes include 5+ measurable metrics](https://resume.io/blog/resume-statistics), yet quantified outcomes are what stand out. Use numbers, percentages, time saved, revenue protected, or incidents reduced.
+Only <a href="https://resume.io/blog/resume-statistics" target="_blank" rel="noopener noreferrer">~26% of resumes include 5+ measurable metrics</a>, yet quantified outcomes are what stand out. Use numbers, percentages, time saved, revenue protected, or incidents reduced.
 
 > **Quick framework:** *Action verb* + *what you did* + *how you did it* + *impact metric*.
 
 ### 5) Format for ATS compatibility
-Avoid tables, text boxes, graphics, and multi-column layouts that can confuse parsers. Use standard section headings and consistent punctuation. See [ATS formatting advice](https://topresume.com/career-advice/what-is-an-ats-resume).
+Avoid tables, text boxes, graphics, and multi-column layouts that can confuse parsers. Use standard section headings and consistent punctuation. See <a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">ATS formatting advice</a>.
 
 ---
 
@@ -99,8 +98,8 @@ Avoid tables, text boxes, graphics, and multi-column layouts that can confuse pa
 **Will it still sound like me?** Yes, if you treat AI as an *enhancer*, not a ghostwriter. You’re not inventing experience; you’re translating your background into the employer’s dialect.
 
 - Keep the **facts** the same; refine the **framing**.
-- Don’t let AI add skills you don’t have or inflate scope.
-- Remember: tailored resumes are expected, and [recruiters prefer them](https://www.enhancv.com/) when they’re accurate and relevant.
+- Don't let AI add skills you don't have or inflate scope.
+- Remember: tailored resumes are expected, and <a href="https://www.enhancv.com/" target="_blank" rel="noopener noreferrer">recruiters prefer them</a> when they're accurate and relevant.
 
 > **Litmus test:** If asked in an interview, could you comfortably talk through every line you tailored? If not, rewrite it.
 
@@ -170,16 +169,24 @@ AI resume tailoring is a **strategic response** to modern hiring—an ethical wa
 
 ### Sources & further reading
 
-- [99% of Fortune 500 companies use ATS](https://topresume.com/career-advice/what-is-an-ats-resume)  
-- [~75% of resumes filtered automatically](https://www.careereducation.columbia.edu/resources/optimizing-your-resume-applicant-tracking-systems)  
-- [71% higher callback rates](https://cultivatedculture.com/resume-statistics/)  
-- [~250 applicants per corporate job](https://www.entrepreneur.com/business-news/employers-can-tell-if-you-used-chatgpt-to-write-your-resume/478444)  
-- [87% of companies use AI recruiting tools](https://www.herohunt.ai/blog/2024-recruitment-statistics-hiring-and-technology)  
-- [~6 seconds per resume](https://www.demandsage.com/ai-recruitment-statistics/)  
-- [~51% keyword match on average](https://resumeworded.com/targeted-resume)  
-- [~2% interview rate](https://resume.io/blog/resume-statistics)  
-- [ATS-friendly formatting guide](https://topresume.com/career-advice/what-is-an-ats-resume)  
-- [Only 26% include 5+ metrics](https://resume.io/blog/resume-statistics)
+- <a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">99% of Fortune 500 companies use ATS</a>  
+- <a href="https://www.careereducation.columbia.edu/resources/optimizing-your-resume-applicant-tracking-systems" target="_blank" rel="noopener noreferrer">~75% of resumes filtered automatically</a>  
+- <a href="https://cultivatedculture.com/resume-statistics/" target="_blank" rel="noopener noreferrer">71% higher callback rates</a>  
+- <a href="https://www.entrepreneur.com/business-news/employers-can-tell-if-you-used-chatgpt-to-write-your-resume/478444" target="_blank" rel="noopener noreferrer">~250 applicants per corporate job</a>  
+- <a href="https://www.herohunt.ai/blog/2024-recruitment-statistics-hiring-and-technology" target="_blank" rel="noopener noreferrer">87% of companies use AI recruiting tools</a>  
+- <a href="https://www.demandsage.com/ai-recruitment-statistics/" target="_blank" rel="noopener noreferrer">~6 seconds per resume</a>  
+- <a href="https://resumeworded.com/targeted-resume" target="_blank" rel="noopener noreferrer">~51% keyword match on average</a>  
+- <a href="https://resume.io/blog/resume-statistics" target="_blank" rel="noopener noreferrer">~2% interview rate</a>  
+- <a href="https://topresume.com/career-advice/what-is-an-ats-resume" target="_blank" rel="noopener noreferrer">ATS-friendly formatting guide</a>  
+- <a href="https://resume.io/blog/resume-statistics" target="_blank" rel="noopener noreferrer">Only 26% include 5+ metrics</a>
 
-</Prose>
+---
+
+<div className="my-12 text-center">
+  <Link
+    to="/builder"
+    className="inline-block bg-[#6B45FF] hover:bg-[#5430BB] text-white font-semibold py-2.5 px-6 rounded-lg text-base transition-colors duration-200 shadow-lg hover:shadow-xl"
+  >
+    Try your 3-Day Free Trial
+  </Link>
 </div>
