--- a/app/routes/blog+/best-ai-resume-tailoring-tools-2025.mdx
+++ b/app/routes/blog+/best-ai-resume-tailoring-tools-2025.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Best AI Resume Tailoring Tools: Complete 2025 Comparison Guide"
 description: "Side-by-side comparison of top AI tailoring tools: features, pricing, ATS fit, and best picks by use case. Includes free trial options."
-date: "2025-09-06"
+date: "2025-10-08"
 tags: ["AI Resume Builders", "Resume Tools", "Guide", "Job Search"]
 keywords: ["AI resume tailoring", "best AI resume tools", "AI resume optimization software", "AI tools to beat ATS", "free AI resume tools"]
 slug: "best-ai-resume-tailoring-tools-2025"
@@ -14,7 +14,13 @@ handle:
 ---
 
 import { Link } from '@remix-run/react'
+import Breadcrumbs from '~/components/ui/breadcrumbs.tsx'
+import { Spacer } from '~/components/spacer.tsx'
+import { Prose } from '~/components/prose.tsx'
 import hero from '~/blog/Best-AI-Resume-Tailoring-Tools-Complete-2025-Comparison-Guide.png'
+
+<div className="mx-auto max-w-3xl px-4">
+  <Prose>
 
 # Best AI Resume Tailoring Tools: Complete 2025 Comparison Guide
 
@@ -331,4 +337,7 @@ Yes. Resume Tailor provides a <a href="/builder" className="text-[#6B45FF] hover
   >
     Try your 3-Day Free Trial
   </Link>
+</div>
+
+  </Prose>
 </div>
